--- a/templates/home.html
+++ b/templates/home.html
@@ -38,6 +38,6 @@
 <h4>me</h4>
 {{ about_me }}
 <p><a href="/about/">about</a></p>
-<p><a href="/external/https://www.notion.so/daily-log-63447c0c2fed42158cb9637cdb04e9af">daily log</a></p>
+<p><a href="/blog/">daily log</a></p>
 </body>
 {% endblock %}
