--- a/templates/artwork.html
+++ b/templates/artwork.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% block body %}
 <body>
-    <p><a href="('/').join(request.referrer.split('/')[3:-1])">back</a></p>
+    <p><a href="/{{ ('/').join(request.referrer.split('/')[3:]) }}">back</a></p>
     <br>
-    {% for image in images%}
+    {% for image in artwork_data['images'] %}
     <img class="artwork responsive" src="{{ url_for('static', filename='imgs/' + image) }}"></img>
-    <br>
     {% endfor %}
-    <p class="caption">{{ info[0] }}. {{ info[1] }}. ({{ info[2] }}).</p>
     <br>
-    <div class="artwork responsive">{{ text }}</div>
+    <p class="caption">{{ artwork_data['title'] }}. {{ artwork_data['materials'] }}. ({{ artwork_data['date'] }}).</p>
+    <br>
+    <div class="artwork responsive">{{ create_markdown(artwork_data['text']) }}</div>
 </body>
 {% endblock %}
