fixed issue with tags being too close

--- a/app/templates/blog/single_post.html
+++ b/app/templates/blog/single_post.html
@@ -15,7 +15,7 @@
 {% endif %}
 {% endfor %}
 
-<p>{% for tag in content['tags'] %}<a href="/blog/tag/{{ tag }}">{{ tag }} </a>{% endfor %}</p>
+<p>{% for tag in content['tags'] %}<a href="/blog/tag/{{ tag }}">{{ tag }</a>{% endfor %}</p>
 <br>
 </body>
 {% endblock %}
