fix banner on mobile

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,7 +22,7 @@
 	</head>
 	<header>
 		<div class="scroll-contain">
-			<div class="banner-link">
+			<div class="banner-link responsive-banner">
 				<a href="https://pioneerworks.org/programs/mvr-3-2/" target="_blank">March 6!  Come see me talk about my batteries! >>> Click for details <<< </a>
 			</div>
 		</div>
